--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -56,8 +56,8 @@ jobs:
     - name: BinaryAppsSuite for developpers
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: 
+        aws-secret-access-key: 
         aws-region: ${{ env.AWS_REGION }}
 
     - name: Login to Amazon ECR
